[package]
name = "render"
version = "0.1.0"
authors = ["theAzack9 <robin@cavachi.be>"]
edition = "2018"

[features]
default = []
metal = ["wgpu/metal"]
dx11 = ["wgpu/dx11"]
dx12 = ["wgpu/dx12"]
vulkan = ["wgpu/vulkan"]

[dependencies]
wgpu = { path = "../../wgpu-rs" }

[dev-dependencies]
cgmath = "0.17"
env_logger = "0.6"
glsl-to-spirv = "0.1"
log = "0.4"